# alia

./: .clang-format  .gitignore  CMakeLists.txt  README.md  alia-design-2025-11.txt  backends.cmake  design-2025-11.md  requirements.md  vcpkg.json
alia-design/: audio-interfaces.md  design.md  graphics-interfaces.md  os-interfaces.md
examples/: CMakeLists.txt  gfx_basic.cpp  hello.cpp  mdspan_example.cpp
include/alia/: alia.hpp
include/alia/audio/: audio.hpp
include/alia/frontend/: basics.hpp  device.hpp  display.hpp  extras.hpp  gfx_3d_classic.hpp  gfx_3d_modern.hpp  gfx_basic.hpp  haptic.hpp  input.hpp  platform.hpp  power.hpp  shared_lib.hpp  timer.hpp
include/alia/graphics/: color.hpp  color_spaces.hpp  display.hpp  gfx_basic.hpp  gfx_hw_classic.hpp  pixel.hpp
include/alia/stdx/: mdspan.hpp
include/alia/util/: mat.hpp  meta.hpp  rect.hpp  vec.hpp
slop/: audio-interfaces.md  design.md  device-swapchain-window.md  graphics-interfaces.md  os-interfaces.md
src/alia/: alia.cpp  alia.hpp
src/alia/core/: arithmetic.hpp  color.hpp  get_time.hpp  rect.hpp  vec.hpp
src/alia/detail/: os_backend.hpp
src/alia/events/: event.hpp  event_bus.hpp  event_queue.hpp  event_router.hpp  event_source.cpp  event_source.hpp  event_source_impl.hpp
src/alia/events/routers/: array_router.hpp  hashmap_router.hpp  interval_tree_router.hpp  rect_quadtree_router.hpp
src/alia/gfx/: backend_d3d9.cpp  backend_ogl.cpp  backend_ogl_win32.cpp  bitmap.hpp  gfx_device.cpp  gfx_device.hpp  pixel.hpp  pixel_types.hpp  primitives.cpp  primitives.hpp  primitives_d3d9.cpp  primitives_ogl.cpp  texture.cpp  texture.hpp  texture_d3d9.cpp  texture_ogl.cpp  transform.cpp  transform.hpp  vertex.hpp
src/alia/gfx/detail/: d3d9_backend.hpp  ogl_backend.hpp
src/alia/io/: joystick.hpp  keyboard.hpp  keycodes.hpp  mouse.hpp  touch.hpp
src/alia/os/: clipboard.hpp  dialog.hpp  dialog_impl_win32.cpp  display.hpp  monitor.hpp  window.cpp  window.hpp  window_events.hpp  window_win32.cpp
src/alia/util/: any_deque.hpp  array_map.hpp  cstring_view.hpp  soo_any.hpp  type_erasure.hpp
test/: CMakeLists.txt  any_deque_test.cpp  array_map_test.cpp  cstring_view_test.cpp  soo_any_test.cpp
tmp/: pyproject.toml  srgb-lut.py  srgb-poly.py
vcpkg-overlay/alia/: portfile.cmake
